[gd_scene load_steps=15 format=3 uid="uid://ct7rciidstb04"]

[ext_resource type="Script" path="res://scenes/Objects/Players/Weapons/Copy Robot/ballade_cracker.gd" id="1_srl0e"]
[ext_resource type="Texture2D" uid="uid://o8qgh1r06aj5" path="res://sprites/Players/Copy Robot/Weapons/Cracker.png" id="3_3toys"]
[ext_resource type="Texture2D" uid="uid://b0wmbfr68jjcj" path="res://sprites/Players/Copy Robot/Weapons/BusterSmall.png" id="4_4ky64"]
[ext_resource type="AudioStream" uid="uid://dcvhxvuushcu4" path="res://sounds/chargeshot.wav" id="5_wx4fk"]
[ext_resource type="AudioStream" uid="uid://cs2dmn3ahpbea" path="res://sounds/pop.wav" id="6_qlb3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7alei"]
atlas = ExtResource("3_3toys")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wndv"]
atlas = ExtResource("3_3toys")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcsd0"]
atlas = ExtResource("3_3toys")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xrgi"]
atlas = ExtResource("3_3toys")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e08mh"]
atlas = ExtResource("4_4ky64")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp8dl"]
atlas = ExtResource("4_4ky64")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhj74"]
atlas = ExtResource("4_4ky64")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmmfq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7alei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wndv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcsd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xrgi")
}],
"loop": true,
"name": &"Move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e08mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp8dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhj74")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fvlc"]
size = Vector2(14, 14)

[node name="BalladeCracker" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_srl0e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.25, 0)
scale = Vector2(1.02381, 1)
sprite_frames = SubResource("SpriteFrames_tmmfq")
animation = &"Move"
autoplay = "Move"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.19209e-07, 4.17233e-07)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0fvlc")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wx4fk")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_qlb3w")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
